/*******************************************************************************
 *                                                                             *
 *                Copyright Â© 2015 - 2019 Subterranean Security                *
 *                                                                             *
 *  Licensed under the Apache License, Version 2.0 (the "License");            *
 *  you may not use this file except in compliance with the License.           *
 *  You may obtain a copy of the License at                                    *
 *                                                                             *
 *      http://www.apache.org/licenses/LICENSE-2.0                             *
 *                                                                             *
 *  Unless required by applicable law or agreed to in writing, software        *
 *  distributed under the License is distributed on an "AS IS" BASIS,          *
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.   *
 *  See the License for the specific language governing permissions and        *
 *  limitations under the License.                                             *
 *                                                                             *
 ******************************************************************************/
syntax = "proto3";

package net;
option java_package = "com.sandpolis.core.proto.net";

/**
 * Request authenticated status for free.
 */
message RQ_NoAuth {
}

/**
 * Request authenticated status using a PasswordMechanism.
 */
message RQ_PasswordAuth {

	// The password of some PasswordMechanism on the server
	string password = 1;
}

/**
 * Request authenticated status using a SAND5 KeyMechanism.
 */
message RQ_KeyAuth {

	// The group ID
	string group_id = 1;

	// The KeyMechanism ID
	int64 mech_id = 2;
}
